<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="5dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="13. März 2021" />

        <TextView
            android:id="@+id/textViewKmOld"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="24dp"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView15"
            app:layout_constraintEnd_toStartOf="@+id/textView17"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            tools:text="312123" />

        <TextView
            android:id="@+id/textViewKmNew"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView17"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView17"
            tools:text="312124" />

        <TextView
            android:id="@+id/textViewAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="24dp"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView19"
            app:layout_constraintEnd_toStartOf="@+id/textView21"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView19"
            tools:text="42l" />

        <TextView
            android:id="@+id/textViewPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView21"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView21"
            tools:text="1.2€/l" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/label_show_entry_kmOld"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDate" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/label_show_entry_kmNeu"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewKmOld"
            app:layout_constraintEnd_toStartOf="@+id/textViewKmNew"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textViewKmOld" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/label_show_entry_amount"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/label_show_entries_price"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewAmount"
            app:layout_constraintEnd_toStartOf="@+id/textViewPrice"
            app:layout_constraintStart_toStartOf="@+id/textView17" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>